--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -28,30 +28,32 @@
     font-size: 5rem;
 }
 
-.about-us-body{
+.about-us-body {
     width: 50%;
     color: white;
 }
-.about-us-body .body{
+
+.about-us-body .body {
     text-align: center;
     font-size: 0.95rem;
     line-height: 1rem;
 }
 
-.btn-more{
+.btn-more {
     background: var(--primary-color);
     color: white;
     border-radius: 0;
+    font-weight: 600;
     padding: 8px 16px;
 }
 
-.btn-more:hover{
+.btn-more:hover {
     color: var(--primary-color);
     font-weight: 500;
 }
 
 @media only screen and (max-width: 1060px) {
-    .about-us-body{
+    .about-us-body {
         width: 100%;
 
     }
@@ -59,5 +61,20 @@
     .about-us-title>p {
         font-weight: 800;
         font-size: 4rem;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .about-us {
+        padding: 80px 25px;
+    }
+}
+
+@media only screen and (max-width: 572px) {
+    .about-us-title{
+        font-size: 2.5rem;
+    }
+    .about-us-title > p{
+        font-size: 2.5rem;
     }
 }
