--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,34 @@
 header {
     background: var(--secondary-color);
+    position: fixed;
+    width: 100%;
+    z-index: 4;
+}
+
+.logo{
+    font-size: 2rem;
+    color: var(--primary-color);
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.logo > p{
+    margin-left: 8px;
+}
+
+.navbar-toggler{
+    border: none;
+    outline: none;
+}
+.navbar-toggler:focus{
+    box-shadow: none;
+}
+
+@media only screen and (max-width: 572px) {
+    .no-padding{
+        padding: 0px !important;
+    }
+    .logo{
+        font-size: 1.5rem;
+    }
 }
