--- a/assets/css/ourservice.css
+++ b/assets/css/ourservice.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: white;
     font-weight: 100;
     text-transform: uppercase;
@@ -56,6 +56,8 @@
     overflow: hidden;
 }
 
+
+
 .card-service-img {
     height: 150px;
     width: 150px;
@@ -68,6 +70,7 @@
 }
 
 .card-service-detail {
+    transition: background .4s ease-in;
     padding: 16px;
     color: white;
     display: flex;
@@ -76,6 +79,16 @@
     background: linear-gradient(to bottom, var(--primary-color) 65%, var(--primary-light-color));
 
 }
+
+.card-service:hover{
+    background: transparent;
+}
+
+.card-service:hover .card-service-detail{
+    background: #2d2d2dd0;
+}
+
+
 
 .card-service-detail .title {
     font-size: 1rem;
@@ -141,7 +154,7 @@
     .our-service {
         position: relative;
         background: var(--secondary-color);
-        z-index: -3;
+        /* z-index: ; */
         height: auto;
         padding: 16px;
         gap: 16px;
@@ -192,4 +205,33 @@
         -webkit-box-orient: vertical; 
     }
 
+}
+
+@media only screen and (max-width: 572px) {
+    .our-service-title {
+        flex-direction: column;
+    }
+    .card-service{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .card-service .card-service-img{
+        width: 100%;
+        aspect-ratio: 1/1;
+        height: auto;
+    }
+    .card-service .card-service-img img{
+        width: 100%;
+        height: 100%;
+    }
+
+    
+    .card-service-detail .body {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 7;
+        overflow: hidden;
+        -webkit-box-orient: vertical; 
+    }
 }
