--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,13 +38,16 @@ section{
   box-sizing: border-box;
 }
 
-body {
+html body {
     background-color: var(--background);
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     font-variation-settings:"wdth" 100;
-    overflow-x: hidden;
+    overflow: hidden;
+    overflow-y: auto;
+    height: 100vh;
+    width: 100vw;
 }
 
 .primary-color{
