--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,7 @@
 header {
     background: var(--secondary-color);
     position: fixed;
-    width: 100%;
+    width: 100vw;
     z-index: 4;
     transition: background .3s ease-out;
 }
@@ -62,6 +62,7 @@ header {
     color: var(--primary-color);
 }
 @media only screen and (max-width: 572px) {
+
     .no-padding{
         padding: 0px !important;
     }
