--- a/assets/css/owl.css
+++ b/assets/css/owl.css
@@ -1,8 +1,25 @@
+/* .owl-carousel{
+    height: 100vh;
+} */
+
+.owl-item {
+    height: 100%;
+}
+
+.owl-carousel{
+    width: 100vw;
+    max-height: 100vh;
+    aspect-ratio: 4/3;
+}
+
 
 .owl-carousel .item {
-    background-color: red;
     width: 100vw;
-    height: 100vh;
+    max-height: 100vh;
+    aspect-ratio: 4/3;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .owl-carousel .item > img {
@@ -10,6 +27,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
+    /* /* object-position: left top; */
     /* background: black; */
 }
 
@@ -22,7 +41,10 @@
     height: 100%;
     width: 100%;
     /* backdrop-filter: blur(2px); */
-
+    
+}
+.owl-carousel .item:nth-child(1) img {
+    object-position: bottom;
 }
 
 
