--- a/assets/css/ourservice.css
+++ b/assets/css/ourservice.css
@@ -14,7 +14,7 @@
     background-color: #fff !important;
     background-size: cover;
     position: absolute;
-    z-index: -2;
+    /* z-index: -2; */
     height: 100%;
     width: 100%;
     /* filter: grayscale(70%); */
@@ -23,7 +23,7 @@
 
 .our-service-img-blur {
     position: absolute;
-    z-index: -1;
+    z-index: 2;
     height: 100%;
     width: 100%;
     background: #0000004f;
@@ -127,7 +127,8 @@
 
 
 .our-service-body {
-    display: grid;
+        z-index: 3;
+        display: grid;
     grid-template-areas: "leftTop rightTop"
         "leftBottom rightBottom";
     gap: 25px;
