--- a/assets/css/ourservice.css
+++ b/assets/css/ourservice.css
@@ -35,6 +35,7 @@
 
 .our-service-title {
     display: flex;
+    z-index: 3;
     flex-direction: column;
     align-items: center;
     font-size: 2.5rem;
