--- a/assets/css/clients.css
+++ b/assets/css/clients.css
@@ -59,8 +59,13 @@
     text-align: center;
 }
 
+.carousel {
+    width: 100%;
+}
+
 .carousel-inner {
     margin-bottom: 75px;
+    width: 100%;
 }
 
 .carousel-indicators button {
