--- a/assets/css/ouradvantages.css
+++ b/assets/css/ouradvantages.css
@@ -73,10 +73,13 @@
     }
 
     .our-advantages-title {
+        font-size: 2.5rem;
+        font-weight: 100;
         flex-direction: column;
     }
     .our-advantages-title > p {
-        font-size: 2.5rem;
+        font-size: 5rem;
+        font-weight: 800;
     }
 
     .our-advantages-body .content h4 {
