--- a/assets/css/ourservice.css
+++ b/assets/css/ourservice.css
@@ -235,8 +235,9 @@
         height: auto;
     }
     .card-service .card-service-img img{
-        width: 100%;
-        height: 100%;
+        width: 472px;
+        height: 472px;
+        object-fit: contain;
     }
 
     
