--- a/assets/css/ourservice.css
+++ b/assets/css/ourservice.css
@@ -12,7 +12,7 @@
 
 
 .our-service-img {
-    background-image: url("../images/ourservice.jpg");
+    background-image: url("../images/ourservice.webp");
     background-color: #fff !important;
     background-size: cover;
     position: absolute;
