--- a/assets/css/owl.css
+++ b/assets/css/owl.css
@@ -8,9 +8,8 @@
 
 .owl-carousel {
     width: 100vw;
-    min-height: 200px;
-    max-height: 100vh;
-    aspect-ratio: 4/3;
+    height: fit-content;
+    display: block;
 }
 
 
@@ -27,7 +26,7 @@
     justify-content: center;
 }
 
-.owl-carousel .item::before {
+.owl-carousel > .item::before {
     top: 0;
     position: absolute;
     content: '';
@@ -56,11 +55,30 @@
     color: white;
 }
 
-.owl-carousel .item:nth-child(1) img {
+.owl-carousel > .item:nth-child(1) img {
     object-position: bottom;
 }
 
 
+@media only screen and (max-width: 640px) {
+
+    .owl-carousel .item:nth-child(1) {
+        background-image: url("../images/banner2/banner1.webp");
+    }
+    .owl-carousel .item:nth-child(2) {
+        background-image: url("../images/banner2/banner2.webp");
+    }
+    .owl-carousel .item:nth-child(3) {
+        background-image: url("../images/banner2/banner3.webp");
+    }
+    .owl-carousel .item:nth-child(4) {
+        background-image: url("../images/banner2/banner4.webp");
+    }
+    .owl-carousel .item:nth-child(5) {
+        background-image: url("../images/banner2/banner5.webp");
+    }
+    
+}
 
 
 @media only screen and (max-width: 572px) {
