--- a/assets/css/ourservice.css
+++ b/assets/css/ourservice.css
@@ -229,9 +229,8 @@
         height: auto;
     }
     .card-service .card-service-img img{
-        width: 472px;
-        height: 472px;
-        object-fit: contain;
+        width: 100%;
+        height: 100%;
     }
 
     
