--- a/assets/css/owl.css
+++ b/assets/css/owl.css
@@ -56,7 +56,14 @@
 }
 
 .owl-carousel > .item:nth-child(1) img {
+    width: 100%;
+    height: 100%;
     object-position: bottom;
+}
+
+.owl-carousel .item img {
+    width: 100%;
+    height: 100%;
 }
 
 
